# normal_surface_calc2

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
include/: math_helper.h  path_point.h  string_convertor.h  transformation2D.h
lib/: CMakeLists.txt  math_helper.cpp  path_point.cpp  string_convertor.cpp
msg/: targetPoints.msg
src/: normal_surface_calc.cpp  normal_surface_calc.cpp~
