<?xml version="1.0"?>
<package>
    <name>normal_surface_calc2</name>
    <version>0.0.0</version>
    <description>The normal_surface_calc package</description>

    <maintainer email="caperez@ualberta.ca">Camilo Perez</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>pcl</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <build_depend>rgb_visualization</build_depend>


    <run_depend>message_runtime</run_depend>
    <run_depend>pcl</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>rgb_visualization</run_depend>
    <build_depend>opencv</build_depend>
    <run_depend>opencv</run_depend>
    <export>
    </export>
</package>
